--- a/blogapp/blog/templates/blog/index.html
+++ b/blogapp/blog/templates/blog/index.html
@@ -17,7 +17,10 @@
  
     <h2>HomePage</h2>
 
-    <img src="{% static 'img/pythondjango.jpg' %}" alt="" width="300">
 
 
 {% endblock %}
+
+{% block js_files %}
+    <script src="{% static 'blog/js/script.js' %}"></script>
+{%endblock%}
