--- a/blogapp/templates/base.html
+++ b/blogapp/templates/base.html
@@ -2,29 +2,141 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>{% block title %} {% endblock %} | Blogapp</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
     {% block css_files %} {%endblock%}
 
-    
+
 </head>
+
 <body>
 
-    <ul>
-        <li><a href="">HomePage</a></li>
-        <li><a href="">Blogs</a></li>
-        <li><a href="">images</a></li>
-    </ul>
+    <nav class="navbar navbar-dark bg-secondary navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="">Blogapp</a>
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Blogs</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-3">
+                <div class="list-group">
+                    <a class="list-group-item list-group-item-action" href="">
+                        Programlama
+                    </a>
+                    <a class="list-group-item list-group-item-action" href="">
+                        Web Programlama
+                    </a>
+                    <a class="list-group-item list-group-item-action" href="">
+                        Mobil Uygulama Geliştirme
+                    </a>
+                    <a class="list-group-item list-group-item-action" href="">
+                        Etik Hackleme
+                    </a>
+                    <a class="list-group-item list-group-item-action" href="">
+                        Ofiste Verimlilik
+                    </a>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="card mb-3">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <img src="{% static 'img/1.jpg' %}" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md-9">
+                            <div class="card-body">
+                                <h5 class="card-title">Sıfırdan Web Geliştirme Kursu</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                                    soluta repellat aliquam vitae adipisci ullam!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <img src="{% static 'img/2.jpg' %}" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md-9">
+                            <div class="card-body">
+                                <h5 class="card-title">Sıfırdan Web Geliştirme Kursu</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                                    soluta repellat aliquam vitae adipisci ullam!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <img src="{% static 'img/3.jpg' %}" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md-9">
+                            <div class="card-body">
+                                <h5 class="card-title">Sıfırdan Web Geliştirme Kursu</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                                    soluta repellat aliquam vitae adipisci ullam!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <img src="{% static 'img/4.jpg' %}" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md-9">
+                            <div class="card-body">
+                                <h5 class="card-title">Sıfırdan Web Geliştirme Kursu</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                                    soluta repellat aliquam vitae adipisci ullam!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <img src="{% static 'img/5.jpg' %}" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md-9">
+                            <div class="card-body">
+                                <h5 class="card-title">Sıfırdan Web Geliştirme Kursu</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                                    soluta repellat aliquam vitae adipisci ullam!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     {% block content %}
 
     {% endblock %}
 
 
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/base.js' %}"></script>
+    {% block js_files %} {%endblock%}
 </body>
+
 </html>
