Refactor blog templates to enhance layout

--- a/blogapp/blog/templates/blog/blogs.html
+++ b/blogapp/blog/templates/blog/blogs.html
@@ -7,7 +7,26 @@
 {% block content %}
 
 
-<h2>Blogs</h2>
+
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-3">
+            {% include 'partials/_categories.html' %} # This is the include tag
+        </div>
+        <div class="col-9">
+            <h1> All Blogs </h1>
+            <hr>
+
+            {%include 'blog/partials/_blog.html'%}
+            {%include 'blog/partials/_blog.html'%}
+            {%include 'blog/partials/_blog.html'%}
+            {%include 'blog/partials/_blog.html'%}
+            {%include 'blog/partials/_blog.html'%}
+                           
+        </div>
+    </div>
+</div>
+
 
 
 {% endblock %}
