--- a/blogapp/blog/templates/blog/index.html
+++ b/blogapp/blog/templates/blog/index.html
@@ -15,7 +15,27 @@
 {% block content %}
 
  
-    <h2>HomePage</h2>
+    
+
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-3">
+                {% include 'partials/_categories.html' %} # This is the include tag
+            </div>
+            <div class="col-9">
+                <h1> HomePage </h1>
+                <hr>
+
+                {%include 'blog/partials/_blog.html'%}
+                {%include 'blog/partials/_blog.html'%}
+                {%include 'blog/partials/_blog.html'%}
+                {%include 'blog/partials/_blog.html'%}
+                {%include 'blog/partials/_blog.html'%}
+                               
+            </div>
+        </div>
+    </div>
+
 
 
 
