--- a/blogapp/blog/templates/blog/blog-details.html
+++ b/blogapp/blog/templates/blog/blog-details.html
@@ -7,7 +7,25 @@
 {% block content %}
 
 
-    <h2>Blog Details: {{ id }}</h2>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-3">
+            {% include 'partials/_categories.html' %} # This is the include tag
+        </div>
+        <div class="col-9">
+            <h1> Blog Details: {{id}} </h1>
+            <hr>
+
+            {%include 'blog/partials/_blog.html'%}
+            {%include 'blog/partials/_blog.html'%}
+            {%include 'blog/partials/_blog.html'%}
+            {%include 'blog/partials/_blog.html'%}
+            {%include 'blog/partials/_blog.html'%}
+                           
+        </div>
+    </div>
+</div>
+
 
 
 {% endblock %}
