Enhance blog templates with dynamic content

--- a/blogapp/blog/templates/blog/blog-details.html
+++ b/blogapp/blog/templates/blog/blog-details.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block title %}
     Blog Details
 {% endblock %}
@@ -13,15 +13,24 @@
             {% include 'partials/_categories.html' %} # This is the include tag
         </div>
         <div class="col-9">
-            <h1> Blog Details: {{id}} </h1>
-            <hr>
+            <div class="card mb-3">
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="{% static 'img/'|add:blog.image %}" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md-9">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                {{blog.title}}
+                                
 
-            {%include 'blog/partials/_blog.html'%}
-            {%include 'blog/partials/_blog.html'%}
-            {%include 'blog/partials/_blog.html'%}
-            {%include 'blog/partials/_blog.html'%}
-            {%include 'blog/partials/_blog.html'%}
-                           
+                            </h5>
+                            <p class="card-text">{{blog.description}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 </div>
