--- a/blogapp/blog/templates/blog/index.html
+++ b/blogapp/blog/templates/blog/index.html
@@ -26,11 +26,14 @@
                 <h1> HomePage </h1>
                 <hr>
 
-                {%include 'blog/partials/_blog.html'%}
-                {%include 'blog/partials/_blog.html'%}
-                {%include 'blog/partials/_blog.html'%}
-                {%include 'blog/partials/_blog.html'%}
-                {%include 'blog/partials/_blog.html'%}
+                {% for blog in blogs%} # This is the for loop
+                    {% if blog.is_home and blog.is_active %} # This is the if statement
+                        {%include 'blog/partials/_blog.html'%} 
+                    {%endif%}
+                {%endfor%}
+
+                
+               
                                
             </div>
         </div>
