--- a/blogapp/blog/templates/blog/blogs.html
+++ b/blogapp/blog/templates/blog/blogs.html
@@ -17,11 +17,11 @@
             <h1> All Blogs </h1>
             <hr>
 
-            {%include 'blog/partials/_blog.html'%}
-            {%include 'blog/partials/_blog.html'%}
-            {%include 'blog/partials/_blog.html'%}
-            {%include 'blog/partials/_blog.html'%}
-            {%include 'blog/partials/_blog.html'%}
+            {% for blog in blogs%}
+                {% if blog.is_active %}
+                    {%include 'blog/partials/_blog.html'%}
+                {%endif%}
+            {%endfor%}
                            
         </div>
     </div>
