--- a/blogapp/blog/templates/partials/_blog.html
+++ b/blogapp/blog/templates/partials/_blog.html
@@ -2,13 +2,18 @@
 <div class="card mb-3">
                     <div class="row">
                         <div class="col-md-3">
-                            <img src="{% static 'img/1.jpg' %}" alt="" class="img-fluid">
+                            <img src="{% static 'img/'|add:blog.image %}" alt="" class="img-fluid">
                         </div>
                         <div class="col-md-9">
                             <div class="card-body">
-                                <h5 class="card-title">Sıfırdan Web Geliştirme Kursu</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
-                                    soluta repellat aliquam vitae adipisci ullam!</p>
+                                <h5 class="card-title">
+
+                                    <a href = "{% url 'blog_details' blog.id %}">
+                                    {{blog.title}}
+                                    </a>
+
+                                </h5>
+                                <p class="card-text">{{blog.description}}</p>
                             </div>
                         </div>
                     </div>
